# goit-ds-hw-03

taks_1/: main.py  pyproject.toml
task_2/: parsing.py  pyproject.toml
